# OpenClashTUI

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
Formula/: clashtui.rb
apt/: apt-ftparchive.conf
apt/dists/stable/: Release
apt/dists/stable/main/binary-amd64/: Packages
apt/dists/stable/main/binary-arm64/: Packages
apt/dists/stable/main/binary-armhf/: Packages
apt/pool/main/: clashtui_0.1.4-1_amd64.deb  clashtui_0.1.4-1_arm64.deb  clashtui_0.1.4-1_armhf.deb  clashtui_0.1.6-1_amd64.deb  clashtui_0.1.6-1_arm64.deb  clashtui_0.1.6-1_armhf.deb  clashtui_0.1.7-1_amd64.deb  clashtui_0.1.7-1_arm64.deb  clashtui_0.1.7-1_armhf.deb
src/: main.rs
