[package]
name = "clashtui"
version = "0.1.0"
edition = "2021"
description = "A TUI tool for managing Clash proxies and rules"
authors = ["ClashTUI Contributors"]
license = "MIT"

[dependencies]
# HTTP client (use rustls to avoid OpenSSL dependency)
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI framework
ratatui = "0.25"
crossterm = "0.27"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI arguments
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Config file
toml = "0.8"
dirs = "5.0"

# URL encoding
urlencoding = "2.1"
tungstenite = "0.28.0"
crossbeam-channel = "0.5.15"

[[bin]]
name = "clashtui"
path = "src/main.rs"
