[package]
name = "clashtui"
version = "0.1.4"
edition = "2021"
description = "A TUI tool for managing Clash proxies and rules"
authors = ["ClashTUI Contributors"]
license = "MIT"

[dependencies]
# HTTP client (use rustls to avoid OpenSSL dependency)
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI framework
ratatui = "0.25"
crossterm = "0.27"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI arguments
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Config file
toml = "0.8"
dirs = "5.0"

# URL encoding
urlencoding = "2.1"
tungstenite = "0.28.0"
crossbeam-channel = "0.5.15"

[[bin]]
name = "clashtui"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "ClashTUI Contributors"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  ["target/release/clashtui", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/clashtui/README.md", "644"],
  ["LICENSE", "usr/share/doc/clashtui/LICENSE", "644"],
]

[package.metadata.deb.variants.arm64]
name = "clashtui"
depends = ["libc6", "libgcc-s1"]

[package.metadata.deb.variants.armv7]
name = "clashtui"
depends = ["libc6", "libgcc-s1"]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/clashtui", dest = "/usr/bin/clashtui", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/clashtui/README.md", mode = "644", doc = true },
  { source = "LICENSE", dest = "/usr/share/doc/clashtui/LICENSE", mode = "644", doc = true },
]
